# gtest

./: CMakeLists.txt  README.md
3thrdpaty/: CMakeLists.txt
src/: main.cpp
src/note/: note.cpp  note.hpp
tests/: CMakeLists.txt  test_note.cpp
